fix: removed horizontal gap in the page

--- a/src/Tab/App.css
+++ b/src/Tab/App.css
@@ -16,15 +16,9 @@ h1 {
   background-color: #282c34;
   display: flex;
   flex-direction: column;
-  row-gap: 1rem;
-  justify-content: start;
-  align-items: center;
   height: 100vh;
-  overflow: hidden auto;
-}
-
-.App > * {
-  max-width: calc(100% - 4rem);
+  width: 100vw;
+  overflow: hidden;
 }
 
 .actions {
